[BACKLOG-40572] Additional add-opens to fix python executor (#9296)